# reqres_tests

./: .env.example  .env.sample  README.md  pyproject.toml  run_server.py
reqres_tests/: .env.sample  .gitignore  README.md  data.json  pyproject.toml  run_server.py  start_server.bat
reqres_tests/src/: api.py  data.py  models.py
reqres_tests/src/models/: app_status.py  pagination.py  users.py
reqres_tests/tests/: conftest.py  test_smoke.py  test_users.py
src/: __init__.py  api.py  data.json
src/models/: __init__.py
tests/: README.md  conftest.py  test_pagination.py  test_smoke.py  test_users.py
