[tool.poetry]
name = "reqres-tests"
version = "0.1.0"
description = "API testing project for ReqRes"
authors = ["Tatiana <90062565+tatafitz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
requests = "^2.32.3"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
email-validator = "^2.1.0"
python-dotenv = "^1.0.1"
fastapi-pagination = "^0.12.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
